--- a/MY_PROJECT.ipynb
+++ b/MY_PROJECT.ipynb
@@ -1372,7 +1372,7 @@
     "tfidf=TfidfVectorizer(stop_words=\"english\")\n",
     "movies_df[\"overview\"]=movies_df[\"overview\"].fillna(\"\")\n",
     "tfidf_matrix=tfidf.fit_transform(movies_df[\"overview\"])\n",
-    "array=tfidf.get_feature_names()\n",
+    "#array=tfidf.get_feature_names()\n",
     "print(array)\n",
     "print(len(array))\n",
     "#print(tfidf_matrix)\n",
